# bevy-init

./: publish.sh  pyproject.toml
.github/workflows/: publish-on-release.yml
src/bevy_init/: __init__.py  cli.py
