[project]
name = "bevy-init"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "PosiNorth", email = "nofacer@outlook.com" }]
requires-python = ">=3.10"
dependencies = ["typer>=0.19.2"]

[project.scripts]
bevy-init = "bevy_init.cli:app"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
